[metadata]
name = samsung_multiroom
summary = Samsung multiroom speaker support
description-file =
    README.rst
author = Krystian Galutowski
author-email = k.galutowski@gmail.com
license = MIT
home-page = https://github.com/krygal/samsung_multiroom
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Home Automation

[files]
packages =
    samsung_multiroom

[pbr]
warnerrors = True

[wheel]
universal = 0

[bdist_wheel]
universal = 0
